--- a/styles/main.css
+++ b/styles/main.css
@@ -10,3 +10,4 @@
 @import "./layout/header.css";
 @import "./layout/banner.css";
 @import "./layout/motivation.css";
+@import "./layout/training-types.css";
