--- a/styles/main.css
+++ b/styles/main.css
@@ -14,3 +14,4 @@
 @import "./layout/join-us.css";
 @import "./layout/location.css";
 @import "./layout/family.css";
+@import "./layout/calculate.css";
