feat: add footer section styles

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,3 +15,4 @@
 @import "./layout/location.css";
 @import "./layout/family.css";
 @import "./layout/calculate.css";
+@import "./layout/footer.css";
