--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
 @import "./base/variables.css";
 @import "./base/globals.css";
 @import "./base/utils.css";
+@import "./base/media.css";
 
 @import "./component/button.css";
 @import "./component/input.css";
