--- a/styles/layout/training-types.css
+++ b/styles/layout/training-types.css
@@ -19,7 +19,7 @@
   align-items: center;
   row-gap: 32px;
   padding-top: var(--trainingTypesItemBgIconSize);
-  background: url("./assets/icons/arrows/transparent-arrow-bottom-left.svg")
+  background: url("../../assets/icons/arrows/transparent-arrow-bottom-left.svg")
     100% 0 / var(--trainingTypesItemBgIconSize) no-repeat;
 }
 
